# GPS-L1CA-GPU-SDR-5ms

./: .gitignore  AcqTrk.cpp  AcqTrk.h  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CUDA_op.cu  CUDA_op.cuh  DSP.cpp  DSP.h  Defines.h  Global.cpp  Global.h  Init.cpp  Init.h  README.md  SDR_Development_CUDA.cpp  Structs.h  UI.cpp  UI.h  stdafx.cpp  stdafx.h
DataLog/MATLAB_Plot/: SDR_Compare_Trajectroy.m  SDR_Compare_Velocity.m  SDR_Plot_Acqisition_1.m  SDR_Plot_Acqisition_2.m  SDR_Plot_Navigation.m  SDR_Plot_SKY_View.m  SDR_Plot_Tracking.m
DataLog/MATLAB_Plot/include/: convert_position_llh2enu.m  convert_position_llh2ned.m  diff_data.m  diff_nav_data.m  diff_nav_data_all.m  plot_3d_reftrj.m  plot_reftrj.m
doc/: Understanding GPS_GNSS. Principles and Applications-3rd (Elliott D. Kaplan,  Christopher J. Hegarty).pdf:Zone.Identifier
